welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {

if (getCouleurSol()==Color.green){
  recule()
  avance()
	}
if (getCouleurSol()=!Color.green){
  recule()
  gauche()
  avance()
	}
}